src/test/deca/context/invalid/assign_diff_type_int_float.deca
// Description : 
// 	test d'affecter deux variables de types différents
//Resultat:
//      Erreur Contextuelle :pour une affectation les variables doivent etre de meme type.
//      Ligne 8 : /src/test/deca/etapeB/invalid/assign_diff_types.deca:7:2: type not expected 
{
float x;
x=3;
}